--- a/qa-stockwell/test-output/index.html
+++ b/qa-stockwell/test-output/index.html
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="at.smartshop.tests.LoginTest" class="method navigator-link" hash-for-method="verifyLoginPageAsSuperUser">verifyLoginPageAsSuperUser</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="org.stockwell.tests.LoginTest" class="method navigator-link" hash-for-method="verifyLoginPageAsSuperUser">verifyLoginPageAsSuperUser</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -122,7 +122,7 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">at.smartshop.tests.LoginTest</span>
+              <span class="class-name">org.stockwell.tests.LoginTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -146,17 +146,17 @@
 &lt;suite thread-count=&quot;1&quot; parallel=&quot;methods&quot; name=&quot;Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;parameter name=&quot;environment&quot; value=&quot;staging&quot;/&gt;
   &lt;listeners&gt;
-    &lt;listener class-name=&quot;at.framework.reportsetup.Listeners&quot;/&gt;
+    &lt;listener class-name=&quot;org.stockwell.reportsetup.Listeners&quot;/&gt;
   &lt;/listeners&gt;
   &lt;test thread-count=&quot;1&quot; parallel=&quot;methods&quot; name=&quot;Test&quot;&gt;
     &lt;parameter name=&quot;driver&quot; value=&quot;staging&quot;/&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;Chrome&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;at.smartshop.tests.LoginTest&quot;&gt;
+      &lt;class name=&quot;org.stockwell.tests.LoginTest&quot;&gt;
         &lt;methods&gt;
           &lt;include name=&quot;verifyLoginPageAsSuperUser&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- at.smartshop.tests.LoginTest --&gt;
+      &lt;/class&gt; &lt;!-- org.stockwell.tests.LoginTest --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -199,13 +199,13 @@ data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'verifyLoginPageAsSuperUser')
-data.setCell(0, 2, 'at.smartshop.tests.LoginTest')
-data.setCell(0, 3, 8012);
+data.setCell(0, 2, 'org.stockwell.tests.LoginTest')
+data.setCell(0, 3, 9046);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 8 seconds</span>
+              <span class="suite-total-time">Total running time: 9 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -231,18 +231,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">at.smartshop.tests.LoginTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">org.stockwell.tests.LoginTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod(staging, Chrome)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">verifyLoginPageAsSuperUser</span>
-                <span class="method-start">2747 ms</span>
+                <span class="method-start">3604 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod</span>
-                <span class="method-start">10759 ms</span>
+                <span class="method-start">12657 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
