--- a/qa-stockwell/test-output/old/Suite/classes.html
+++ b/qa-stockwell/test-output/old/Suite/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>at.smartshop.tests.LoginTest</td>
+<td>org.stockwell.tests.LoginTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
