--- a/qa-stockwell/test-output/emailable-report.html
+++ b/qa-stockwell/test-output/emailable-report.html
@@ -9,10 +9,16 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">12,912</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">11,151</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">org.stockwell.tests.LoginTest</td><td><a href="#m0">verifyLoginPageAsSuperUser</a></td><td rowspan="1">1718368139203</td><td rowspan="1">9046</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">org.stockwell.tests.LoginTest</td><td><a href="#m0">verifyLoginPageAsSuperUser</a></td><td rowspan="1">1720517097629</td><td rowspan="1">8507</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">org.stockwell.tests.LoginTest#verifyLoginPageAsSuperUser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">org.stockwell.tests.LoginTest#verifyLoginPageAsSuperUser</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: Failed due to java.lang.NullPointerException: Cannot invoke &quot;com.aventstack.extentreports.ExtentTest.log(com.aventstack.extentreports.Status, String)&quot; because the return value of &quot;org.stockwell.reportsetup.ExtFactory.getExtent()&quot; is null could not capture the screenshot due to java.lang.ArrayIndexOutOfBoundsException: Index 1 out of bounds for length 1
+	at org.stockwell.tests.TestInfra.failWithScreenShot(TestInfra.java:65)
+	at org.stockwell.tests.LoginTest.verifyLoginPageAsSuperUser(LoginTest.java:32)
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1136)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
+	at java.base/java.lang.Thread.run(Thread.java:840)
+... Removed 13 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
