--- a/qa-stockwell/test-output/old/Suite/methods-alphabetical.html
+++ b/qa-stockwell/test-output/old/Suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="947bc5">  <td>24/06/14 17:59:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestInfra.afterMethod()[pri:0, instance:org.stockwell.tests.LoginTest@52b1beb6]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-1@493610730</td>   <td></td> </tr>
-<tr bgcolor="947bc5">  <td>24/06/14 17:58:55</td>   <td>-12653</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestInfra.beforeMethod(java.lang.String,java.lang.String)[pri:0, instance:org.stockwell.tests.LoginTest@52b1beb6]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-1@493610730</td>   <td></td> </tr>
-<tr bgcolor="9db49b">  <td>24/06/14 17:58:59</td>   <td>-9054</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyLoginPageAsSuperUser()[pri:0, instance:org.stockwell.tests.LoginTest@52b1beb6]">verifyLoginPageAsSuperUser</td> 
-  <td>TestNG-test=Test-1@493610730</td>   <td></td> </tr>
+<tr bgcolor="a561cf">  <td>24/07/09 14:55:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestInfra.afterMethod()[pri:0, instance:org.stockwell.tests.LoginTest@72f926e6]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-1@1173965257</td>   <td></td> </tr>
+<tr bgcolor="a561cf">  <td>24/07/09 14:54:55</td>   <td>-10937</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestInfra.beforeMethod(java.lang.String,java.lang.String)[pri:0, instance:org.stockwell.tests.LoginTest@72f926e6]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-1@1173965257</td>   <td></td> </tr>
+<tr bgcolor="938063">  <td>24/07/09 14:54:57</td>   <td>-8511</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyLoginPageAsSuperUser()[pri:0, instance:org.stockwell.tests.LoginTest@72f926e6]">verifyLoginPageAsSuperUser</td> 
+  <td>TestNG-test=Test-1@1173965257</td>   <td></td> </tr>
 </table>
