--- a/qa-stockwell/TestReports/Results.html
+++ b/qa-stockwell/TestReports/Results.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Stockwell Test Automation</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Jul 23, 2024 11:56:07 am</span></a>
+<a href="#"><span class="badge badge-primary">Jul 23, 2024 12:01:55 pm</span></a>
 </li>
 </ul>
 </div>
@@ -81,7 +81,7 @@
           <div class="test-detail">
             <p class="name">[org.stockwell.tests.LoginTest][verifyLoginPageAsSuperUser] - </p>
             <p class="text-sm">
-              <span>11:56:09 am</span> / <span>00:00:08:809</span>
+              <span>12:01:58 pm</span> / <span>00:00:08:848</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -90,14 +90,14 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">[org.stockwell.tests.LoginTest][verifyLoginPageAsSuperUser] - </h5>
-<span class='badge badge-success'>07.23.2024 11:56:09</span>
-<span class='badge badge-danger'>07.23.2024 11:56:18</span>
-<span class='badge badge-default'>00:00:08:809</span>
+<span class='badge badge-success'>07.23.2024 12:01:58</span>
+<span class='badge badge-danger'>07.23.2024 12:02:06</span>
+<span class='badge badge-default'>00:00:08:848</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 </div>
 </div>
 </div>    <div class="row mb-3"><div class="col-md-3">
-    <img data-featherlight='/Users/padmavathid/eclipse-workspace/StockwellAutomation/qa-stockwell/TestReports/205072024/23_07_24_11_56_17_am.png' src="/Users/padmavathid/eclipse-workspace/StockwellAutomation/qa-stockwell/TestReports/205072024/23_07_24_11_56_17_am.png">
+    <img data-featherlight='/Users/padmavathid/eclipse-workspace/StockwellAutomation/qa-stockwell/TestReports/205072024/23_07_24_12_02_06_pm.png' src="/Users/padmavathid/eclipse-workspace/StockwellAutomation/qa-stockwell/TestReports/205072024/23_07_24_12_02_06_pm.png">
     
     </div></div>
 <div class="detail-body mt-4">
@@ -106,84 +106,84 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>11:56:12</td>
+        <td>12:02:01</td>
         <td>
           navigated to url [https://staging.stockwell.ai/client/login ]
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>11:56:12</td>
+        <td>12:02:01</td>
         <td>
           waited for element [ By.xpath: //input[@type='text'] ] and the object is visible
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>11:56:13</td>
+        <td>12:02:01</td>
         <td>
           entered text padmavathi@stockwell.ai
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>11:56:13</td>
+        <td>12:02:01</td>
         <td>
           waited for element [ By.xpath: //input[@type='password'] ] and the object is visible
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>11:56:13</td>
+        <td>12:02:02</td>
         <td>
           entered text PadduUme@85
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>11:56:13</td>
+        <td>12:02:02</td>
         <td>
           the object [By.xpath: //span[text()='Sign In'] ] is focused
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>11:56:13</td>
+        <td>12:02:02</td>
         <td>
           clicked on [ By.xpath: //span[text()='Sign In'] ]
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>11:56:17</td>
+        <td>12:02:06</td>
         <td>
           waited for element [ By.xpath: //button[@aria-label='Side Nav'] ] and the object is visible
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>11:56:17</td>
+        <td>12:02:06</td>
         <td>
           By.xpath: //button[@aria-label='Side Nav'] is displayed
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>11:56:17</td>
+        <td>12:02:06</td>
         <td>
           AssertTrue:[true]
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>11:56:17</td>
+        <td>12:02:06</td>
         <td>
            method [verifyLoginPageAsSuperUser] is passed
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>11:56:18</td>
+        <td>12:02:06</td>
         <td>
           closed the browser
         </td>
@@ -207,13 +207,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Jul 23, 2024 11:56:07 am</h3>
+<h3>Jul 23, 2024 12:01:55 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Jul 23, 2024 11:56:18 am</h3>
+<h3>Jul 23, 2024 12:02:06 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -283,7 +283,7 @@
 </div></div>
 <script>
 var timeline = {
-"[org.stockwell.tests.LoginTest][verifyLoginPageAsSuperUser] - ":8.809
+"[org.stockwell.tests.LoginTest][verifyLoginPageAsSuperUser] - ":8.848
 };
 </script>
 <div class="row">
