--- a/qa-stockwell/test-output/old/Suite/methods-alphabetical.html
+++ b/qa-stockwell/test-output/old/Suite/methods-alphabetical.html
@@ -1,14 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e495ff">  <td>24/07/25 16:42:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestInfra.afterClass()[pri:0, instance:org.stockwell.tests.LoginTest@1530c739]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=Test-1@1301629852</td>   <td></td> </tr>
-<tr bgcolor="e495ff">  <td>24/07/25 16:42:15</td>   <td>-160</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestInfra.afterMethod()[pri:0, instance:org.stockwell.tests.LoginTest@1530c739]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-1@1301629852</td>   <td></td> </tr>
-<tr bgcolor="e495ff">  <td>24/07/25 16:41:58</td>   <td>-17786</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestInfra.beforeClass()[pri:0, instance:org.stockwell.tests.LoginTest@1530c739]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=Test-1@1301629852</td>   <td></td> </tr>
-<tr bgcolor="e495ff">  <td>24/07/25 16:41:58</td>   <td>-17769</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestInfra.beforeMethod(java.lang.String,java.lang.String)[pri:0, instance:org.stockwell.tests.LoginTest@1530c739]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-1@1301629852</td>   <td></td> </tr>
-<tr bgcolor="e1e270">  <td>24/07/25 16:42:01</td>   <td>-14302</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyLoginPageAsSuperUser()[pri:0, instance:org.stockwell.tests.LoginTest@1530c739]">verifyLoginPageAsSuperUser</td> 
-  <td>TestNG-test=Test-1@1301629852</td>   <td></td> </tr>
+<tr bgcolor="827a96">  <td>24/07/30 13:27:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestInfra.afterClass()[pri:0, instance:org.stockwell.tests.LoginTest@248e319b]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=Test-1@1710850852</td>   <td></td> </tr>
+<tr bgcolor="827a96">  <td>24/07/30 13:27:40</td>   <td>-113</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestInfra.afterMethod()[pri:0, instance:org.stockwell.tests.LoginTest@248e319b]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-1@1710850852</td>   <td></td> </tr>
+<tr bgcolor="827a96">  <td>24/07/30 13:27:28</td>   <td>-12454</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestInfra.beforeClass()[pri:0, instance:org.stockwell.tests.LoginTest@248e319b]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=Test-1@1710850852</td>   <td></td> </tr>
+<tr bgcolor="827a96">  <td>24/07/30 13:27:28</td>   <td>-12446</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestInfra.beforeMethod(java.lang.String,java.lang.String)[pri:0, instance:org.stockwell.tests.LoginTest@248e319b]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-1@1710850852</td>   <td></td> </tr>
+<tr bgcolor="827a96">  <td>24/07/30 13:27:28</td>   <td>-12888</td> <td title="&gt;&gt;TestInfra.beforeSuit(java.lang.String,java.lang.String)[pri:0, instance:org.stockwell.tests.LoginTest@248e319b]">&gt;&gt;beforeSuit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>Test worker@646910062</td>   <td></td> </tr>
+<tr bgcolor="9d8174">  <td>24/07/30 13:27:30</td>   <td>-10476</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyLoginPageAsSuperUser()[pri:0, instance:org.stockwell.tests.LoginTest@248e319b]">verifyLoginPageAsSuperUser</td> 
+  <td>TestNG-test=Test-1@1710850852</td>   <td></td> </tr>
 </table>
